kustomize/base/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grill-stats
  labels:
    name: grill-stats
    app.kubernetes.io/name: grill-stats
    app.kubernetes.io/part-of: grill-stats
